<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/linearLayout"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:padding="@dimen/box_inset_layout_padding"
tools:context=".Testing">

    <TextView
        android:id="@+id/label_layout_header"
        android:layout_width="366dp"
        android:layout_height="53dp"
        android:layout_marginTop="56dp"
        android:textAlignment="center"
        android:textSize="24sp"
        android:text="@string/ACTIVITY_LABEL_TESTING"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <fragment
        android:id="@+id/fragment"
        android:name="world.hello.quiz.CurrentQuestion"
        android:layout_width="371dp"
        android:layout_height="440dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.542"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.405"
        tools:layout="@layout/fragment_current_question" />

    <Button
        android:id="@+id/btn_choiсe1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:onClick="onChooseAnswer"
        android:text="@string/BUTTON_LABEL_MAKE_YOUR_CHOICE_1"
        app:layout_constraintBottom_toTopOf="@+id/btn_choiсe3"
        app:layout_constraintEnd_toEndOf="@+id/btn_choiсe3" />

    <Button
        android:id="@+id/btn_choiсe2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onChooseAnswer"
        android:text="@string/BUTTON_LABEL_MAKE_YOUR_CHOICE_2"
        app:layout_constraintBottom_toBottomOf="@+id/btn_choiсe1"
        app:layout_constraintStart_toStartOf="@+id/btn_choiсe4" />

    <Button
        android:id="@+id/btn_choiсe3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="85dp"
        android:layout_marginBottom="16dp"
        android:onClick="onChooseAnswer"
        android:text="@string/BUTTON_LABEL_MAKE_YOUR_CHOICE_3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_choiсe4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="85dp"
        android:onClick="onChooseAnswer"
        android:text="@string/BUTTON_LABEL_MAKE_YOUR_CHOICE_4"
        app:layout_constraintBottom_toBottomOf="@+id/btn_choiсe3"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/questionCounter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="1/10"
        app:layout_constraintBottom_toBottomOf="@+id/label_layout_header"
        app:layout_constraintEnd_toEndOf="@+id/label_layout_header"
        app:layout_constraintTop_toTopOf="@+id/label_layout_header"
        app:layout_constraintVertical_bias="0.529" />

    <Button
        android:id="@+id/btn_closeTesting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:onClick="doCloseTesting"
        android:text="Finish testing"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/btn_choiсe3"
        app:layout_constraintEnd_toEndOf="@+id/fragment"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btn_choiсe1" />

    <TextView
        android:id="@+id/tw_PressAnyButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/LABEL_HELP_MESSAGE_PRESS_ANY_BUTTON"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/btn_choiсe1"
        app:layout_constraintEnd_toEndOf="@+id/btn_closeTesting"
        app:layout_constraintStart_toStartOf="@+id/btn_closeTesting"
        app:layout_constraintTop_toBottomOf="@+id/fragment" />
</androidx.constraintlayout.widget.ConstraintLayout>